--- a/AWRPC/AWRPC.vcxproj
+++ b/AWRPC/AWRPC.vcxproj
@@ -78,9 +78,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\bin</OutDir>
+    <IntDir>$(SolutionDir)$(Platform)\$(Configuration)\Intermidiate</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\bin</OutDir>
+    <IntDir>$(SolutionDir)$(Platform)\$(Configuration)\Intermidiate</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
