--- a/AWRPC/AWRPC.vcxproj
+++ b/AWRPC/AWRPC.vcxproj
@@ -39,6 +39,7 @@
     <ClInclude Include="discord\src\msg_queue.h" />
     <ClInclude Include="discord\src\rpc_connection.h" />
     <ClInclude Include="discord\src\serialization.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="src\Helpers\Helper.hpp" />
     <ClInclude Include="src\Discord\Discord.h" />
     <ClInclude Include="src\Helpers\logger.h" />
@@ -46,6 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="discord\src\discord_register_osx.m" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="AWRPC.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\awrpc.png" />
+    <Image Include="icon1.ico" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -176,6 +184,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
